# stm32-rs-cam-display

./: Cargo.toml  README.md
.cargo/: config.toml
src/: camera.rs  constants.rs  display.rs  main.rs  usart_debugger.rs
