[package]
name = "stm32-rs-cam-display"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
stm32f4 = { version = "0.15.1", features = ["stm32f401"] }
